--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*main styles*/
 :root {
   --primary-text-color: #757575;
   --primary-title-color: #212121;
@@ -14,12 +15,12 @@ html {
 *::after {
   box-sizing: border-box;
 }
-
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
 }
+/*header*/
 .header {
   display: flex;
   justify-content: space-between;
@@ -131,7 +132,7 @@ ul {
 :focus {
   color: var(--accent-color);
 }
-
+/*section1*/
 .section-1,
 .container-1 {
   padding-top: 94px;
@@ -147,24 +148,20 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
-.section-2,
-.section-3,
-.section-4 {
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
+.section-2 {
+  padding-bottom: 47px;
+}
+.advantages-style {
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   display: flex;
-  width: 1200px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
-.advantages-style {
-  margin: 0px;
-}
-.section-1 .advantages-card:not(:last-child) {
-  margin-right: 30px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+.advantages-4 {
+  margin-right: -30px;
 }
 .advantages-1,
 .advantages-2,
@@ -172,6 +169,12 @@ ul {
 .advantages-4 {
   width: 270px;
   display: inline-block;
+  margin-right: 30px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.advantages-4 {
+  margin-right: -30px;
 }
 .index-title {
   color: var(--primary-white-color);
@@ -213,13 +216,16 @@ ul {
   letter-spacing: 0.03em;
 }
 .advantages {
-  width: 70px;
-  height: 70px;
-  align-items: center;
-}
-.section-2 .advantages {
   width: 270px;
-  height: 120px;
+  align-items: center;
+  padding-left: 100px;
+  padding-right: 100px;
+  background-color: var(--secondary-white-color);
+  border-radius: 4px;
+  padding-bottom: 25px;
+  padding-top: 25px;
+}
+/*.advantages {
   margin-bottom: 30px;
   background-color: var(--secondary-white-color);
   padding-top: 25px;
@@ -227,12 +233,18 @@ ul {
   padding-bottom: 25px;
   padding-left: 100px;
   border-radius: 4px;
+}*/
+.img-advantages {
+  width: 70px;
+  height: 70px;
 }
-img {
+.img {
   display: block;
 }
 .advantages-card {
   margin-right: 30px;
+  width: 270px;
+  height: 120px;
 }
 .section-3,
 .container-3 {
@@ -246,10 +258,7 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-.section-3 .main-info {
-  margin-top: 0px;
-  margin-bottom: 50px;
-}
+
 .main-info {
   font-weight: 700;
   font-size: 36px;
@@ -257,17 +266,23 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
+  width: 1200px;
+  margin-top: 0px;
+  margin-bottom: 50px;
 }
-.section-3 .main-style {
-  display: flex;
-  position: relative;
-}
+
 .main-style {
-  margin: 0px;
+  margin-left: auto;
+  margin-right: 0px;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
   display: flex;
   position: relative;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
-.section-4 .container-4 {
+.container-4 {
   padding-top: 94px;
   padding-bottom: 94px;
   width: 1200px;
@@ -281,19 +296,23 @@ img {
 .container-4 .team-item-container:not(:last-child) {
   margin-right: 30px;
 }
-.section-4 .container-4 {
+.section-4 {
   background-color: var(--secondary-white-color);
 }
 .section-4 .main-info {
   margin-top: 0px;
   margin-bottom: 50px;
 }
-.section-4 .main-style {
+.main-style {
   display: flex;
 }
 .team-item-container {
   width: 270px;
   display: inline-block;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--primary-white-color);
 }
 .team-item-container-images {
   margin-bottom: 30px;
@@ -362,6 +381,15 @@ img {
 :focus {
   color: var(--accent-color);
 }
+.logo-client {
+  display: flex;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+}
 .section-5 {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -371,7 +399,7 @@ img {
   margin-bottom: 50px;
 }
 .clients-container {
-  width: 1200px;
+  width: 1170px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -382,12 +410,13 @@ img {
   justify-content: center;
   margin: 0px;
 }
+
 .client-item:not(:last-child) {
   margin-right: 30px;
 }
 
 .social-link-container {
-  margin-right: 102px;
+  padding-top: 60px;
 }
 .address {
   font-family: Roboto;
@@ -412,13 +441,13 @@ img {
   background-color: #2f303a;
 }
 .container-footer {
-  width: 1200px;
+  width: 1170px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 .address-block {
   margin-top: 20px;
@@ -432,6 +461,17 @@ img {
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
 }
+.active-social-link {
+  width: 44px;
+  height: 44px;
+  display: inline-block;
+}
+.active-social-link:not(:last-child) {
+  margin-right: 10px;
+}
+.social-link-list {
+  padding-left: 0px;
+}
 .contacts {
   font-family: Roboto;
   font-style: normal;
@@ -439,17 +479,19 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-
   color: rgba(255, 255, 255, 0.6);
 }
+.contacts-footer-conteiner {
+  padding-left: 0px;
+}
 .join-in {
+  display: block;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin-bottom: 21px;
-  display: block;
 }
 .filter-button {
   font-family: Roboto;
@@ -461,24 +503,32 @@ img {
   letter-spacing: 0.03em;
   background-color: #f5f4fa;
   color: var(--primary-title-color);
-}
-.section-gallery {
-  width: 1200px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  border: 0px;
+  padding: 0px;
 }
 .filter-button-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1200px;
+  width: 1170px;
+  margin-top: 93px;
+  margin-bottom: 34px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .filter-button-item {
   display: inline-block;
   background-color: var(--secondary-white-color);
+  border-radius: 4px;
+  padding-bottom: 6px;
+  padding-top: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
 }
+
 .filter-button-item::not(:last-child) {
   margin-right: 8px;
 }
@@ -508,20 +558,62 @@ img {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.list-work-element {
-}
-.gallery-list {
-  margin: 0px;
-  display: flex;
-  position: relative;
-}
-
 .list-work-container {
-  width: 1200px;
+  width: 1170px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 34px;
   margin-bottom: 94px;
+}
+.list-work-element {
+  width: 370px;
+  margin: 15px;
+  display: block;
+}
+.list-work-element:nth-child(3n) {
+  margin-right: -30px;
+}
+.list-work-item {
+  display: inline-block;
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.gallery-element {
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  box-sizing: border-box;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  width: 370px;
+  padding-left: 23px;
+  padding-right: 23px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.gallery-list {
+  margin: -15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.gallery-ul {
+  padding-left: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px;
+}
+.img-gallery {
+  margin-right: 0px;
+  width: 370px;
+}
+.img-work-element {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.work-projects {
+  display: block;
 }
