--- a/css/style.css
+++ b/css/style.css
@@ -160,21 +160,16 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
-.advantages-4 {
-  margin-right: -30px;
-}
-.advantages-1,
-.advantages-2,
-.advantages-3,
-.advantages-4 {
+.advantages-card {
   width: 270px;
+  height: 120px;
   display: inline-block;
-  margin-right: 30px;
   margin-top: 0px;
   margin-bottom: 0px;
+  margin-right: 30px;
 }
-.advantages-4 {
-  margin-right: -30px;
+.advantages-card:not (:last-child) {
+margin-right: 30px;
 }
 .index-title {
   color: var(--primary-white-color);
@@ -225,26 +220,12 @@ ul {
   padding-bottom: 25px;
   padding-top: 25px;
 }
-/*.advantages {
-  margin-bottom: 30px;
-  background-color: var(--secondary-white-color);
-  padding-top: 25px;
-  padding-right: 100px;
-  padding-bottom: 25px;
-  padding-left: 100px;
-  border-radius: 4px;
-}*/
 .img-advantages {
   width: 70px;
   height: 70px;
 }
 .img {
   display: block;
-}
-.advantages-card {
-  margin-right: 30px;
-  width: 270px;
-  height: 120px;
 }
 .section-3,
 .container-3 {
@@ -558,8 +539,8 @@ ul {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.list-work-container {
-  width: 1170px;
+.section-gallery {
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -567,14 +548,17 @@ ul {
   margin-top: 34px;
   margin-bottom: 94px;
 }
-.list-work-element {
+
+/*.list-work-element {
   width: 370px;
   margin: 15px;
   display: block;
 }
-.list-work-element:nth-child(3n) {
+*/
+.list-work-item:nth-child(3n) {
   margin-right: -30px;
 }
+
 .list-work-item {
   display: inline-block;
   width: 370px;
@@ -599,6 +583,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
 }
+
 .gallery-ul {
   padding-left: 0px;
   display: flex;
@@ -614,6 +599,7 @@ ul {
   max-width: 100%;
   height: auto;
 }
-.work-projects {
+/*.work-projects {
   display: block;
 }
+
