--- a/css/style.css
+++ b/css/style.css
@@ -19,20 +19,23 @@ body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
+  margin-top: 0px;
 }
-/*header*/
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
+  
 }
+/*
 .header {
   border: 1px solid #ececec;
 }
+*/
 
 .container {
-  box-sizing: border-box;
+  
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -111,6 +114,10 @@ ul {
   letter-spacing: 0.02em;
   color: var(--accent-color);
 }
+.nav-list-items {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
 
 .contacts-element-1,
 .contacts-element-2 {
@@ -133,9 +140,9 @@ ul {
   color: var(--accent-color);
 }
 /*section1*/
-.section-1,
+.section-1, 
 .container-1 {
-  padding-top: 94px;
+  padding-top: 47px;
   padding-bottom: 47px;
   display: flex;
   flex-direction: column;
@@ -147,10 +154,14 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 200px;
+  padding-top: 200px;
 }
+/*
 .section-2 {
   padding-bottom: 47px;
 }
+*/
 .advantages-style {
   width: 1200px;
   padding-left: 15px;
@@ -159,10 +170,11 @@ ul {
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0px;
+    margin-bottom: 0px;
 }
 .advantages-card {
   width: 270px;
-  height: 120px;
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -180,7 +192,6 @@ margin-right: 30px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
-  margin-top: 0px;
 }
 .link-services {
   background-color: var(--accent-color);
@@ -196,6 +207,7 @@ margin-right: 30px;
   font-weight: 700;
   padding-top: 10px;
 }
+
 .h3-advantages {
   font-size: 14px;
   line-height: 1.14;
@@ -209,6 +221,8 @@ margin-right: 30px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .advantages {
   width: 270px;
@@ -227,11 +241,11 @@ margin-right: 30px;
 .img {
   display: block;
 }
-.section-3,
-.container-3 {
-  padding-top: 47px;
-  padding-bottom: 94px;
+
+.section-3 {
+  padding-top: 94px;
 }
+
 .container-3 {
   width: 1200px;
   padding-left: 15px;
@@ -320,14 +334,14 @@ margin-right: 30px;
   position: relative;
 }
 
-.text-main-services {
+/*.text-main-services {
   background: rgba(47, 48, 58, 0.8);
   padding-top: 27px;
   padding-bottom: 27px;
   min-width: 370px;
   position: absolute;
   top: 76.3%;
-}
+}*/
 .team {
   font-size: 16px;
   line-height: 1.19;
@@ -349,10 +363,13 @@ margin-right: 30px;
 }
 .list-social-network {
   display: flex;
-  justify-content: space-around;
+  padding-right: 32px;
+  padding-left: 32px;
+  justify-content:space-evenly;
 }
 .social-network-element {
-  padding-bottom: 36px;
+  padding-top: 16px;
+  padding-bottom: 24px;
 }
 .active-social-link:hover,
 :focus {
@@ -397,7 +414,7 @@ margin-right: 30px;
 }
 
 .social-link-container {
-  padding-top: 60px;
+  padding-top: 72px;
 }
 .address {
   font-family: Roboto;
@@ -410,11 +427,9 @@ margin-right: 30px;
   margin-bottom: 9px;
 }
 .address-item {
-  display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-right: 179px;
-  min-width: 231px;
+  margin-right: 69px;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -441,17 +456,30 @@ margin-right: 30px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
+
 }
 .active-social-link {
   width: 44px;
   height: 44px;
-  display: inline-block;
 }
 .active-social-link:not(:last-child) {
   margin-right: 10px;
 }
+/*
+.active-social-link:hover,
+:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+*/
 .social-link-list {
   padding-left: 0px;
+  display: flex;
+  margin-top: 0px;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  
+
 }
 .contacts {
   font-family: Roboto;
@@ -472,7 +500,7 @@ margin-right: 30px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-white-color);
-  margin-bottom: 21px;
+  margin-bottom: 20px;
 }
 .filter-button {
   font-family: Roboto;
@@ -489,28 +517,26 @@ margin-right: 30px;
 }
 .filter-button-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 1170px;
-  margin-top: 93px;
+  justify-content: center;
+  width: 1200px;
+  padding-top: 93px;
   margin-bottom: 34px;
-  display: flex;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin-top: 0px;
+
 }
 .filter-button-item {
-  display: inline-block;
   background-color: var(--secondary-white-color);
   border-radius: 4px;
   padding-bottom: 6px;
   padding-top: 6px;
   padding-left: 22px;
   padding-right: 22px;
+  
 }
 
-.filter-button-item::not(:last-child) {
+.filter-button-item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -524,12 +550,15 @@ margin-right: 30px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-title-color);
+  margin-top: 20px;
+  margin-bottom: 4px;
 }
 .list-work-type {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+   margin-bottom: 20px;
 }
 .list-work-text {
   font-style: normal;
@@ -545,11 +574,13 @@ margin-right: 30px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 34px;
-  margin-bottom: 94px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 34px;
+  padding-bottom: 94px;
 }
 
-/*.list-work-element {
+.list-work-element {
   width: 370px;
   margin: 15px;
   display: block;
@@ -564,6 +595,9 @@ margin-right: 30px;
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.link-work-element{
+  
 }
 .gallery-element {
   border-right: 1px solid #eeeeee;
@@ -582,14 +616,24 @@ margin-right: 30px;
   margin: -15px;
   display: flex;
   flex-wrap: wrap;
+  padding-left: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 17px;
+  
+}
+.gallery-list:nth-child(-n + 3){
+  margin-top: -15px;
 }
 
+/*
 .gallery-ul {
   padding-left: 0px;
   display: flex;
   flex-wrap: wrap;
   margin: 0px;
 }
+*/
 .img-gallery {
   margin-right: 0px;
   width: 370px;
