--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,15 @@ body {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
   margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  
 }
 /*
 .header {
@@ -35,7 +37,6 @@ body {
 */
 
 .container {
-  
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -118,7 +119,10 @@ ul {
   margin-top: 32px;
   margin-bottom: 32px;
 }
-
+.contacts {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 .contacts-element-1,
 .contacts-element-2 {
   display: inline-block;
@@ -140,10 +144,8 @@ ul {
   color: var(--accent-color);
 }
 /*section1*/
-.section-1, 
+.section-1,
 .container-1 {
-  padding-top: 47px;
-  padding-bottom: 47px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -157,11 +159,10 @@ ul {
   padding-bottom: 200px;
   padding-top: 200px;
 }
-/*
 .section-2 {
-  padding-bottom: 47px;
+  padding-top: 94px;
 }
-*/
+
 .advantages-style {
   width: 1200px;
   padding-left: 15px;
@@ -171,7 +172,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 .advantages-card {
   width: 270px;
@@ -181,7 +182,7 @@ ul {
   margin-right: 30px;
 }
 .advantages-card:not (:last-child) {
-margin-right: 30px;
+  margin-right: 30px;
 }
 .index-title {
   color: var(--primary-white-color);
@@ -192,6 +193,7 @@ margin-right: 30px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+  margin-top: 0px;
 }
 .link-services {
   background-color: var(--accent-color);
@@ -236,7 +238,6 @@ margin-right: 30px;
 }
 .img-advantages {
   width: 70px;
-  height: 70px;
 }
 .img {
   display: block;
@@ -244,6 +245,7 @@ margin-right: 30px;
 
 .section-3 {
   padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .container-3 {
@@ -263,7 +265,8 @@ margin-right: 30px;
   color: var(--primary-title-color);
   width: 1200px;
   margin-top: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 0px;
+  padding-bottom: 50px;
 }
 
 .main-style {
@@ -294,10 +297,6 @@ margin-right: 30px;
 .section-4 {
   background-color: var(--secondary-white-color);
 }
-.section-4 .main-info {
-  margin-top: 0px;
-  margin-bottom: 50px;
-}
 .main-style {
   display: flex;
 }
@@ -312,6 +311,13 @@ margin-right: 30px;
 .team-item-container-images {
   margin-bottom: 30px;
 }
+.img-team-social-element {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-top: 28px;
+  margin-bottom: 36px;
+}
 
 .main-services {
   font-size: 14px;
@@ -321,13 +327,13 @@ margin-right: 30px;
   text-transform: uppercase;
   color: var(--primary-white-color);
   background: rgba(47, 48, 58, 0.8);
+  padding-bottom: 14px;
+  padding-top: 14px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .main-services-list:not(:last-child) {
   margin-right: 30px;
-}
-.section-4 .main-info {
-  margin-top: 0px;
-  margin-bottom: 50px;
 }
 .section-4 .main-style {
   display: flex;
@@ -359,18 +365,18 @@ margin-right: 30px;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   margin-top: 0px;
-  margin-bottom: 28px;
+  margin-bottom: 0px;
 }
 .list-social-network {
   display: flex;
   padding-right: 32px;
   padding-left: 32px;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
-.social-network-element {
+/*.social-network-element {
   padding-top: 16px;
   padding-bottom: 24px;
-}
+}*/
 .active-social-link:hover,
 :focus {
   color: var(--accent-color);
@@ -390,11 +396,7 @@ margin-right: 30px;
 }
 .section-5 {
   padding-top: 94px;
-  padding-bottom: 94px;
-}
-.section-5 .main-info {
-  margin-top: 0px;
-  margin-bottom: 50px;
+  padding-bottom: 88px;
 }
 .clients-container {
   width: 1170px;
@@ -403,10 +405,13 @@ margin-right: 30px;
   margin-left: auto;
   margin-right: auto;
 }
-.section-5 .list-clients {
+.list-clients {
   display: flex;
   justify-content: center;
   margin: 0px;
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .client-item:not(:last-child) {
@@ -424,14 +429,14 @@ margin-right: 30px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
-  margin-bottom: 9px;
+  margin-bottom: 0px;
 }
 .address-item {
   flex-direction: column;
   justify-content: space-around;
   margin-right: 69px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  margin-top: 66px;
+  margin-bottom: 54px;
 }
 .background-footer {
   background-color: #2f303a;
@@ -456,30 +461,32 @@ margin-right: 30px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
-
 }
-.active-social-link {
-  width: 44px;
-  height: 44px;
+.contacts-footer-conteiner {
+  padding-left: 0px;
+  margin-bottom: 0px;
+}
+.active-social-link-footer {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 .active-social-link:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 22px;
 }
-/*
 .active-social-link:hover,
 :focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
-*/
 .social-link-list {
-  padding-left: 0px;
   display: flex;
+  width: 206px;
+  justify-content: space-between;
   margin-top: 0px;
-  padding-top: 20px;
-  padding-bottom: 100px;
-  
-
+  margin-bottom: 0px;
+  padding-left: 0px;
 }
 .contacts {
   font-family: Roboto;
@@ -490,8 +497,10 @@ margin-right: 30px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.contacts-footer-conteiner {
-  padding-left: 0px;
+.social-link-container {
+  margin-top: 78px;
+  margin-bottom: 94px;
+  padding-top: 0px;
 }
 .join-in {
   display: block;
@@ -519,12 +528,13 @@ margin-right: 30px;
   display: flex;
   justify-content: center;
   width: 1200px;
-  padding-top: 93px;
-  margin-bottom: 34px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 0px;
+  padding-bottom: 50px;
+  margin-left: 0px;
+  margin-right: 0px;
   margin-top: 0px;
-
+  margin-bottom: 0px;
+  padding-left: 0px;
 }
 .filter-button-item {
   background-color: var(--secondary-white-color);
@@ -533,7 +543,6 @@ margin-right: 30px;
   padding-top: 6px;
   padding-left: 22px;
   padding-right: 22px;
-  
 }
 
 .filter-button-item:not(:last-child) {
@@ -550,7 +559,7 @@ margin-right: 30px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-title-color);
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 4px;
 }
 .list-work-type {
@@ -558,7 +567,8 @@ margin-right: 30px;
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-   margin-bottom: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 .list-work-text {
   font-style: normal;
@@ -568,7 +578,7 @@ margin-right: 30px;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.section-gallery {
+.container-gallery {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -576,8 +586,8 @@ margin-right: 30px;
   margin-right: auto;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 34px;
-  padding-bottom: 94px;
+  padding-top: 88px;
+  padding-bottom: 99px;
 }
 
 .list-work-element {
@@ -585,9 +595,8 @@ margin-right: 30px;
   margin: 15px;
   display: block;
 }
-*/
 .list-work-item:nth-child(3n) {
-  margin-right: -30px;
+  margin-right: 0px;
 }
 
 .list-work-item {
@@ -596,8 +605,8 @@ margin-right: 30px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.link-work-element{
-  
+.list-work-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
 }
 .gallery-element {
   border-right: 1px solid #eeeeee;
@@ -613,16 +622,18 @@ margin-right: 30px;
   padding-bottom: 20px;
 }
 .gallery-list {
-  margin: -15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
   display: flex;
   flex-wrap: wrap;
   padding-left: 0px;
   display: flex;
   flex-wrap: wrap;
-  padding-top: 17px;
-  
+  padding-top: 0px;
 }
-.gallery-list:nth-child(-n + 3){
+/*.gallery-list:nth-child(-n + 3) {
   margin-top: -15px;
 }
 
@@ -643,7 +654,10 @@ margin-right: 30px;
   max-width: 100%;
   height: auto;
 }
-/*.work-projects {
+.img-social-footer {
   display: block;
+  width: 20px;
+  height: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
-
