Редактирование позиционирования элементов

--- a/css/style.css
+++ b/css/style.css
@@ -159,20 +159,24 @@ ul {
   padding-bottom: 200px;
   padding-top: 200px;
 }
-.section-2 {
+/*.section-2 {
+  padding-top: 94px;
+}*/
+.container-2 {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 94px;
 }
 
 .advantages-style {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
   display: flex;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-left: 0px;
 }
 .advantages-card {
   width: 270px;
@@ -263,18 +267,17 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
-  width: 1200px;
   margin-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  padding-bottom: 0px;
 }
 
 .main-style {
   margin-left: auto;
   margin-right: 0px;
   width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 0px;
+  padding-right: 0px;
   display: flex;
   position: relative;
   margin-top: 0px;
@@ -315,8 +318,7 @@ ul {
   display: block;
   max-width: 100%;
   height: auto;
-  margin-top: 28px;
-  margin-bottom: 36px;
+  padding: 12px;
 }
 
 .main-services {
@@ -372,11 +374,17 @@ ul {
   padding-right: 32px;
   padding-left: 32px;
   justify-content: space-evenly;
+  margin-top: 16px;
+  margin-bottom: 24px;
 }
-/*.social-network-element {
-  padding-top: 16px;
-  padding-bottom: 24px;
-}*/
+.social-network-element:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-link-team {
+  width: 44px;
+  height: 44px;
+}
 .active-social-link:hover,
 :focus {
   color: var(--accent-color);
@@ -399,7 +407,7 @@ ul {
   padding-bottom: 88px;
 }
 .clients-container {
-  width: 1170px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -410,8 +418,8 @@ ul {
   justify-content: center;
   margin: 0px;
   width: 1200px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .client-item:not(:last-child) {
@@ -435,8 +443,10 @@ ul {
   flex-direction: column;
   justify-content: space-around;
   margin-right: 69px;
-  margin-top: 66px;
-  margin-bottom: 54px;
+  padding-top: 66px;
+  padding-bottom: 54px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .background-footer {
   background-color: #2f303a;
@@ -498,9 +508,9 @@ ul {
   color: rgba(255, 255, 255, 0.6);
 }
 .social-link-container {
-  margin-top: 78px;
-  margin-bottom: 94px;
-  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 94px;
+  padding-top: 78px;
 }
 .join-in {
   display: block;
@@ -529,11 +539,11 @@ ul {
   justify-content: center;
   width: 1200px;
   padding-top: 0px;
-  padding-bottom: 50px;
+  padding-bottom: 0px;
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 50px;
   padding-left: 0px;
 }
 .filter-button-item {
